--- a/MyMessager_GB/UI/Base.lproj/Main.storyboard
+++ b/MyMessager_GB/UI/Base.lproj/Main.storyboard
@@ -142,31 +142,34 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="143"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="r32-hX-KG4">
-                                            <rect key="frame" x="28" y="20.5" width="114" height="102"/>
-                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KIK-Gm-jMH">
-                                            <rect key="frame" x="150" y="19" width="41.5" height="105"/>
+                                            <rect key="frame" x="148" y="19" width="41.5" height="105"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jXS-6O-Hzb" customClass="PersonePhoto" customModule="MyMessager_GB" customModuleProvider="target">
+                                            <rect key="frame" x="20" y="19" width="120" height="105"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="120" id="SiJ-si-t13"/>
+                                                <constraint firstAttribute="width" constant="120" id="aUh-BD-JR9"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="KIK-Gm-jMH" firstAttribute="leading" secondItem="r32-hX-KG4" secondAttribute="trailing" priority="999" constant="8" id="DL8-WZ-hFz"/>
+                                        <constraint firstItem="jXS-6O-Hzb" firstAttribute="top" secondItem="79Z-fF-riS" secondAttribute="topMargin" constant="8" id="FB8-Ul-2Ol"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="KIK-Gm-jMH" secondAttribute="bottom" constant="8" id="Fkq-6u-OSH"/>
-                                        <constraint firstItem="r32-hX-KG4" firstAttribute="width" secondItem="79Z-fF-riS" secondAttribute="width" multiplier="0.275362" id="LbI-DY-p8E"/>
                                         <constraint firstItem="KIK-Gm-jMH" firstAttribute="top" secondItem="79Z-fF-riS" secondAttribute="topMargin" constant="8" id="QCK-Hr-JHO"/>
-                                        <constraint firstItem="r32-hX-KG4" firstAttribute="height" secondItem="79Z-fF-riS" secondAttribute="height" multiplier="0.734266" id="Yyt-fs-B3h"/>
-                                        <constraint firstItem="r32-hX-KG4" firstAttribute="top" secondItem="79Z-fF-riS" secondAttribute="topMargin" constant="8" id="bx4-Tb-l9i"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="r32-hX-KG4" secondAttribute="bottom" constant="8" id="fIv-Uk-92a"/>
+                                        <constraint firstItem="jXS-6O-Hzb" firstAttribute="leading" secondItem="79Z-fF-riS" secondAttribute="leadingMargin" id="Xv9-82-aOb"/>
+                                        <constraint firstItem="KIK-Gm-jMH" firstAttribute="leading" secondItem="jXS-6O-Hzb" secondAttribute="trailing" constant="8" id="Z5Z-25-zoc"/>
                                         <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="KIK-Gm-jMH" secondAttribute="trailing" constant="8" id="ffW-YX-g13"/>
-                                        <constraint firstItem="r32-hX-KG4" firstAttribute="leading" secondItem="79Z-fF-riS" secondAttribute="leadingMargin" constant="8" id="fuU-Y5-Ywy"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="jXS-6O-Hzb" secondAttribute="bottom" constant="8" id="goc-8K-K38"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="nameAndSurnameLabel" destination="KIK-Gm-jMH" id="gbh-pO-RRG"/>
-                                    <outlet property="picture" destination="r32-hX-KG4" id="7aN-F6-q6Q"/>
+                                    <outlet property="picture" destination="jXS-6O-Hzb" id="nlJ-Pi-ZMo"/>
                                     <segue destination="Kre-Qm-EIM" kind="show" identifier="openPerson" id="4Rk-Ai-fL3"/>
                                 </connections>
                             </tableViewCell>
@@ -527,7 +530,6 @@
         <image name="paperplane.circle.fill" catalog="system" width="128" height="121"/>
         <image name="person.2" catalog="system" width="128" height="81"/>
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
-        <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="shift.fill" catalog="system" width="128" height="106"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
