--- a/MyMessager_GB/UI/Base.lproj/Main.storyboard
+++ b/MyMessager_GB/UI/Base.lproj/Main.storyboard
@@ -193,34 +193,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mEi-dy-0xn">
-                            <size key="itemSize" width="128" height="128"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mEi-dy-0xn">
+                            <size key="itemSize" width="179" height="218"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PersoneCollectionViewCell" id="0ZO-zg-m61" customClass="PersoneCollectionViewCell" customModule="MyMessager_GB" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                <rect key="frame" x="0.0" y="0.0" width="179" height="216"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="rxa-k2-g7h">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="179" height="216"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle." translatesAutoresizingMaskIntoConstraints="NO" id="mTL-zc-nf0">
-                                            <rect key="frame" x="8" y="8" width="112" height="112"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mTL-zc-nf0">
+                                            <rect key="frame" x="8" y="9.5" width="163" height="160.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="163" id="HBg-NC-XmF"/>
+                                                <constraint firstAttribute="width" constant="163" id="Y0K-d1-zkj"/>
+                                            </constraints>
                                         </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BGB-dI-6AP" customClass="LikeControl" customModule="MyMessager_GB" customModuleProvider="target">
+                                            <rect key="frame" x="133" y="179" width="30" height="30"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="countLikes">
+                                                    <integer key="value" value="1"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="color" keyPath="color">
+                                                    <color key="value" systemColor="systemRedColor"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="mTL-zc-nf0" firstAttribute="top" secondItem="rxa-k2-g7h" secondAttribute="top" constant="8" id="0ik-a4-8Cj"/>
-                                        <constraint firstItem="mTL-zc-nf0" firstAttribute="leading" secondItem="rxa-k2-g7h" secondAttribute="leading" constant="8" id="1hR-Gd-y6O"/>
-                                        <constraint firstItem="mTL-zc-nf0" firstAttribute="height" secondItem="rxa-k2-g7h" secondAttribute="height" multiplier="0.875" id="AOc-e8-oRE"/>
-                                        <constraint firstAttribute="bottom" secondItem="mTL-zc-nf0" secondAttribute="bottom" constant="8" id="Tww-SV-1mW"/>
-                                        <constraint firstAttribute="trailing" secondItem="mTL-zc-nf0" secondAttribute="trailing" constant="8" id="Vr4-q9-cNh"/>
-                                        <constraint firstItem="mTL-zc-nf0" firstAttribute="width" secondItem="rxa-k2-g7h" secondAttribute="width" multiplier="0.875" id="uy3-TW-1zC"/>
+                                        <constraint firstAttribute="trailing" secondItem="mTL-zc-nf0" secondAttribute="trailing" constant="8" id="BDl-Ad-E9H"/>
+                                        <constraint firstItem="BGB-dI-6AP" firstAttribute="width" secondItem="rxa-k2-g7h" secondAttribute="width" multiplier="0.167598" id="I7Y-JW-AMY"/>
+                                        <constraint firstAttribute="bottom" secondItem="BGB-dI-6AP" secondAttribute="bottom" constant="7" id="MUv-16-5fW"/>
+                                        <constraint firstItem="BGB-dI-6AP" firstAttribute="top" secondItem="mTL-zc-nf0" secondAttribute="bottom" constant="8" id="OsK-zI-HyY"/>
+                                        <constraint firstItem="mTL-zc-nf0" firstAttribute="leading" secondItem="rxa-k2-g7h" secondAttribute="leading" constant="8" id="XMS-un-BbW"/>
+                                        <constraint firstItem="BGB-dI-6AP" firstAttribute="height" secondItem="rxa-k2-g7h" secondAttribute="height" multiplier="0.138889" id="aUv-bd-QKo"/>
+                                        <constraint firstAttribute="trailing" secondItem="BGB-dI-6AP" secondAttribute="trailing" constant="16" id="gWT-3H-NX9"/>
+                                        <constraint firstItem="mTL-zc-nf0" firstAttribute="top" secondItem="rxa-k2-g7h" secondAttribute="top" constant="8" id="xe3-uT-Kj0"/>
                                     </constraints>
                                 </collectionViewCellContentView>
+                                <size key="customSize" width="179" height="216"/>
                                 <connections>
+                                    <outlet property="likeControll" destination="BGB-dI-6AP" id="cra-ih-NKZ"/>
                                     <outlet property="picture" destination="mTL-zc-nf0" id="tGV-Fk-o93"/>
                                 </connections>
                             </collectionViewCell>
@@ -523,9 +543,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="checkmark.circle." width="128" height="128"/>
         <image name="folder" catalog="system" width="128" height="97"/>
         <image name="folder.fill" catalog="system" width="128" height="97"/>
+        <image name="heart" catalog="system" width="128" height="109"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="paperplane.circle.fill" catalog="system" width="128" height="121"/>
         <image name="person.2" catalog="system" width="128" height="81"/>
@@ -536,6 +556,9 @@
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
